fix a bug that will break the app on first load; add an alert if the player returns after solving the puzzle

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html, body, #root {
   @apply h-full m-0 p-0
 }
